Fix height on mobile and add footer link to home

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -15,7 +15,7 @@
        screen and (max-height: 400px) {
             
     .header {
-        height: fit-content;
+        height: 90vh;
         overflow: auto;
         position: static !important;
     }
